// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Cards - renders a child object 1`] = `
<a
  className="cards "
  href="#"
>
  

  <div
    className="cards-content"
  >
    This is child text
  </div>
  

  <div
    className="cards-cta"
  >
    

    <span
      className="arrow"
    />
  </div>
</a>
`;

exports[`Component: Cards - renders a text in card-body 1`] = `
<a
  className="cards "
  href="#"
>
  

  <div
    className="cards-content"
  >
    Text that goes in card body
  </div>
  

  <div
    className="cards-cta"
  >
    

    <span
      className="arrow"
    />
  </div>
</a>
`;

exports[`Component: Cards - renders a title 1`] = `
<a
  className="cards "
  href="#"
>
  

  <span
    className="h4"
  >
    Card title goes here
  </span>
  

  <div
    className="cards-cta"
  >
    

    <span
      className="arrow"
    />
  </div>
</a>
`;

exports[`Component: Cards - renders a wide card when wide is true 1`] = `
<a
  className="cards cards-wide"
  href="#"
>
  

  <div
    className="cards-cta"
  >
    

    <span
      className="arrow"
    />
  </div>
</a>
`;

exports[`Component: Cards - renders an icon when icon is provided 1`] = `
<a
  className="cards "
  href="#"
>
  

  <i
    aria-hidden="true"
    className="cards-icon at-home"
  />
  

  <div
    className="cards-cta"
  >
    

    <span
      className="arrow"
    />
  </div>
</a>
`;

exports[`Component: Cards - renders an image 1`] = `
<a
  className="cards "
  href="#"
>
  

  <img
    alt="alt text to be set"
    className=""
    src="url.address"
  />
  

  <div
    className="cards-cta"
  >
    

    <span
      className="arrow"
    />
  </div>
</a>
`;
